# CaveBot

./: .gitignore  .gitmodules  LICENSE.md  README.md
CaveCore/: ap.sh  core.py  main.py  requirements.txt  route.sh  setup.sh
CaveCore/services/: service.py
CaveMap/: calculator.js  database.py  index.html  main.py  outline.md
CaveMap/deprecated/: main.py  models.py  outline.md  ssh_client.py.deprecated
CaveMap/frontend/: README.md  index.html  vite.config.js
CaveMap/static/: expr.js  script.js  siml.js
CaveMap/templates/: index.html
CaveSense/: CMakeLists.txt  notes.md
CaveSense/deprecated/: distanceScan.cpp
CaveSense/deprecated/python-lib/: main.py
CaveSense/deprecated/python-lib/src/: pico_serial_interface.py
CaveSense/hc-sr04-lib/: README.md
CaveSense/hc-sr04-lib/include/: distance_sensor.h
CaveSense/hc-sr04-lib/src/: distance_sensor.cpp  sensor.pio
CaveSense/include/: CaveSense.h  config.h  hcsr04.h
CaveSense/python-lib/src/: pico_serial_interface.py
CaveSense/src/: CaveSense.cpp  distanceScan.cpp  main.cpp  serial_handler.cpp
ImGui/: UI.py  script.lua
PrimeDrive/src/: datasend.py  prime-code.py  primeCommands.py  prime_cli.py  prime_commandline.py  pybricksconnect.py  square.py
Pybricks-Code/src/: prime-code.py
UI/: main.py  notes.md  rb-api.py  simulation.py  ssh_client.py  vecmath.py
UI/frontend/: COMPONENTS.md  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
UI/pylib/: simulation.py  vecmath.py
UI/static/: expr.js  map.js  map2.js  mapperlib.js  script.js  vecmath.js
UI/templates/: index.html  ui.html
docs/: README.md  api-reference.md  frontend-migration.md  hardware-guide.md  pico system.drawio  project-overview.md  setup-guide.md  system-architecture.md  testing-guide.md
microcontrollers/: CMakeLists.txt  notes.md  notes.txt  platformio.ini
microcontrollers/include/: serial_handler.cpp  serial_handler.h
microcontrollers/src/: distanceScan.cpp  main.cpp  outdata.cpp  serial_handler.cpp
rpi/: main.py
rpi/src/: pico_serial_interface.py
sparkprime/src/: datasend.py  inputstream.py  prime-code.py  proof.py  pybricksconnect.py  sendhi.py  visualdemo.py
spikeprime/: setupNstuff.md
spikeprime/src/: basicdemo.py  commandline.py  datasend.py  (+14 more)
tests/: README.md  __init__.py  requirements.txt  run_tests.py  test_integration.py  test_rpi_serial.py  test_spikeprime_commands.py  test_ui_simulation.py
utils/: copyrighter.py
(+59 files in other folders)
